fixing overflow of an element

--- a/Day 7/Portfolio/css/contact.css
+++ b/Day 7/Portfolio/css/contact.css
@@ -94,6 +94,7 @@
       width: 100%;
       text-align: left;
       padding-left: 5%;
+      margin-top: 4%;
    }
    .contact-form input{
       width: 90%;
@@ -120,6 +121,6 @@
   }
   .message-adjustment{
    align-items: flex-start;
-   margin-left: 12%;
+   padding-left: 5%;
   }
 }
